test_compiler/errors/e04.gm
Procedure foo (G: Graph; X: N_P<Int>(G))  // X cannot be an output argument
{  
}
